# PePPAR-Fix

./: .gitignore  CLAUDE.md  README.md  SESSION-HANDOFF.md  pyproject.toml  requirements-mon.txt  requirements.txt
.beads/: .beads-credential-key
DOCS/: full-data-flow.md  platform-support.md  time-and-platform-todo.md  time-correlation.md
config/: 99-timehat-devices.rules  99-timelab.rules  clkpoc3.toml  madhat.toml  ocxo-i226.toml  ocxo.toml  otcbob1.toml  oxco.toml  pipuss.toml  ptpmon.toml  receivers.toml  timehat.toml
deploy/: peppar-fix.service
docs/: .antenna-calibration-plan.md.swp  .ppp-ar-design.md.swp  adjfine-noise-characterization-2026-04-09.md  antenna-calibration-plan.md  antenna-quality-metrics-plan.md  architecture-vision.md  asd-psd-servo-tuning.md  bds-ppp-integration.md  bnc-log-reference.md  carrier-phase-servo.md  caster-ephemeris.md  clock-state-modeling.md  clockmatrix-bootstrap-plan.md  correction-sources.md  cycle-slip-diff-day0426.md  diag-fleet-survey.md  dofreqest-sign-chain.md  draft-dupage-inquiry.md  e810-cm5-research.md  engine-obs-model-rollup-20260423.md  external-ppp-log-schema.md  extts-lifecycle.md  f9t-firmware-capabilities.md  filter-stiffness-redesign.md  fleet-consensus-monitors.md  freerun-characterization.md  full-data-flow.md  future-work.md  galileo-has-research.md  glossary.md  gnss-accuracy-ladder.md  i226-perout-500ms-bug.md  igc-kernel-patches.md  ionospheric-data-sources.md  kalman-servo-results-2026-04-10.md  l5i-l5q-phase-bias-empirical.md  lab-operations.md  lambda-ar-plan.md  madhat-bringup-2026-04-07.md  misnomers.md  (+53 more)
hooks/: pre-commit
old/: README.md  ntrip_test.py  peppar_fix_main.py  phc_servo.py
peppar_bus/: __init__.py  _abc.py  (+4 more)
(+292 files in other folders)
